@@ -289,7 +289,7 @@
     </div><!-- body -->
 
     <div id="copyright">
-      <p>Copyright &copy; 2007, <a href="http://home.cs.tum.edu/~siegel">daniel g. siegel</a>
+      <p>Copyright &copy; 2007,2008 <a href="http://home.cs.tum.edu/~siegel">daniel g. siegel</a>
       <br />
       GNOME and the foot logo are trademarks of the GNOME Foundation.
       <br />
