@@ -1,3 +1,10 @@
+2008-01-14  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html,
+	  www.gnome.org/projects/cheese/screenshots.html: 
+	  update the cheese (c) to 2008
+
 2008-01-12  daniel g. siegel <dgsiegel@gmail.com>
 
 	* www.gnome.org/projects/cheese/index.html: 
